--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<meta name="format-detection" content="telephone=no" />
-<title>派涅尔</title>
-<meta name="Keywords" content="派涅尔"/>
-<meta name="renderer" content="webkit">
-<link rel="stylesheet" href="./css/reset.css" type="text/css" media="screen" charset="utf-8">
-<link rel="stylesheet" href="./css/style.css" type="text/css" media="screen" charset="utf-8">
-<link rel="stylesheet" href="./css/animate.css" type="text/css" media="screen" charset="utf-8">
-<link rel="stylesheet" href="./css/cx.css" type="text/css" media="screen" charset="utf-8">
-<script src="./js/jQuery.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/prefixfree.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/jquery.mousewheel.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/tools.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/template.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/init.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/ui.js" type="text/javascript" charset="utf-8"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="Keywords" content="派涅尔"/>
+    <meta name="renderer" content="webkit">
+    <link href="favicon.ico" rel="shortcut icon">
+    <title>派涅尔</title>
+    <link rel="stylesheet" href="./css/reset.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="./css/style.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="./css/animate.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="./css/cx.css" type="text/css" media="screen" charset="utf-8">
+    <script src="./js/jQuery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/prefixfree.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/jquery.mousewheel.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/tools.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/template.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/init.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/ui.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
-<div class="loading">
-    <img src="./image/loading.gif" width="32" height="32">
-</div>
+    <div class="loading">
+        <img src="./image/loading.gif" width="32" height="32">
+    </div>
 
-<div class="header">
+    <div class="header">
 	<div class="header-main w1000">
 		<div class="logo"><a href="index.html"><img src="./image/logo.png" alt="首页" ></a></div>
 		
@@ -36,7 +37,7 @@
 			<b></b>
 			<ul>
 				<li class="ho on">
-					<a href="/about/profile/index.htm" class="btit">关于我们</a>
+					<a href="/index/about/" class="btit">关于我们</a>
 					<!--<div class="subnav" style="width:500px;">-->
 						<!--<a href="index.php/about/profile/index.htm">品牌简介</a><span>·</span>-->
 						<!--<a href="index.php/about/culture/index.htm">品牌文化</a><span>·</span>-->
@@ -46,7 +47,7 @@
 					<!--</div>-->
 				</li>
 				<li class="ho">
-					<a href="index.php/product/advantage/index.htm" class="btit">产品中心</a>
+					<a href="/index/product/" class="btit">产品中心</a>
 					<!--<div class="subnav" style="width:500px;">-->
 						<!---->
 						<!--<a href="index.php/product/advantage/index.htm">产品介绍</a><span>·</span>-->
@@ -56,7 +57,7 @@
 					<!--</div>-->
 				</li>
 				<li class="ho">
-					<a href="index/news/index.html" class="btit">新闻中心</a>
+					<a href="/index/news/" class="btit">新闻中心</a>
 					<!--<div class="subnav" style="width:400px;">-->
 						<!--<a class="first" href="index.php/manage/index.htm">品牌资讯</a><span>·</span>-->
 						<!--<a href="index.php/manage/33/index.htm">热门观点</a><span>·</span>-->
@@ -81,17 +82,17 @@
                          <!--<a href="index.php/list/list/8/index.htm">工程案例</a>-->
 					<!--</div> -->
 				<!--</li>-->
-				<li class="ho">
-					<a href="index.php/design/index.htm" class="btit">服务中心</a>
+				<!--<li class="ho">-->
+					<!--<a href="index.php/design/index.htm" class="btit">服务中心</a>-->
 					 <!--<div class="subnav" style="width:400px;left:auto;left:-10px;">-->
 					<!--<a class="first" href="index.php/design_ACFBB307">服务理念</a><span>·</span>-->
 						<!--<a href="index.php/design_23FC827D">服务支持</a><span>·</span>-->
                          <!--<a href="index.php/design/home/index.htm">家居顾问</a>-->
 					<!--</div>-->
-				</li>
-				<!--<li class="ho">-->
-					<!--<a href="index.php/contact/index.htm" class="btit">联系我们</a>-->
 				<!--</li>-->
+				<li class="ho">
+					<a href="/index/contact/" class="btit">联系我们</a>
+				</li>
 			</ul>
 		</div>
 		<!--<div class="right">-->
@@ -101,17 +102,17 @@
 	<div class="bg"></div>
 </div>
 
-<div class="lxfx">
-    <ul>
-        <li><a href="http://wpa.qq.com/msgrd?v=3&uin=871586801&site=qq&menu=yes" target="_black"><div class="leftlx"><i></i><p>QQ咨询</p></div></a></li>
-        <li><a href="javascript:void(0)"><div class="leftlx"><i class="icon-tel"></i><p>咨询电话</p></div><span>0512-67722480</span></a></li>
-        <li style="overflow: visible"><a href="javascript:void(0)"><div class="leftlx"><i class="icon-wx"></i><p>微信公众号</p></div></a>
-			<div class="ewm"><img src="./image/drny.jpg" width="120" height="120"></div>
-		</li>
-        <li><a href="http://weibo.com" target="_black"><div class="leftlx"><i class="icon-wb"></i><p>关注微博</p></div></a></li>
-    </ul>
-</div>
-<script>
+    <div class="lxfx">
+        <ul>
+            <li><a href="http://wpa.qq.com/msgrd?v=3&uin=871586801&site=qq&menu=yes" target="_black"><div class="leftlx"><i></i><p>QQ咨询</p></div></a></li>
+            <li><a href="javascript:void(0)"><div class="leftlx"><i class="icon-tel"></i><p>咨询电话</p></div><span>0512-67722480</span></a></li>
+            <li style="overflow: visible"><a href="javascript:void(0)"><div class="leftlx"><i class="icon-wx"></i><p>微信公众号</p></div></a>
+                <div class="ewm"><img src="./image/drny.jpg" width="120" height="120"></div>
+            </li>
+            <li><a href="http://weibo.com" target="_black"><div class="leftlx"><i class="icon-wb"></i><p>关注微博</p></div></a></li>
+        </ul>
+    </div>
+    <script>
     var lxbtn=$(".lxfx li");
     lxbtn.each(function(){
         var index=$(this).index()
@@ -143,7 +144,7 @@
     })
 </script>
 
-<div class="banner">
+    <div class="banner">
 	<ul class="jslist">
 		<li style="background:url(http://lvwarm.com/upload/2015/05/04/143071052893l2fhr.jpg) no-repeat center">
 			<div class="bannertxt w1000">
@@ -173,11 +174,26 @@
 			</div>
 		</li>
 	</ul>
-	<!--<div class="number">-->
-		<!--<span  class="current" ><i><div class="sz1"></div></i></span>-->
-		<!--<span ><i><div class="sz2"></div></i></span>-->
-		<!--<span ><i><div class="sz3"></div></i></span>-->
-	<!--</div>-->
+	<div class="number">
+		<span  class="current" ><i><div class="sz1"></div></i></span>
+		<span ><i><div class="sz2"></div></i></span>
+		<span ><i><div class="sz3"></div></i></span>
+	</div>
+</div>
+
+<div class="pro-se w1000">
+    <div class="pro-fi">
+    <div class="intoentit"><img src="../../../static/web/img/company_21_E7A774CF.png" alt="Brand Profile" width="326" height="34"></div>
+    <div class="intocntit">品牌简介</div>
+</div>
+    <div class="le">
+        <img src="../../../upload/2015/05/04/143071062579l2q8f.jpg" width="413" height="479"  >
+    </div>
+    <div class="ri">
+        <img src="../../../static/web/img/company_35_E7A774CF.jpg" width="473" height="106"><br><br>
+        <p class="p">浙江冬日暖阳电热科技有限公司作为一家与时俱进、专业化、现代化的企业，自成立以来，就以专业、专注的发热地板研发与制造而享誉国内外。在“温暖·家·生活”的品牌理念指引下，致力于家居生活暖文化的倡导和推广，重塑代表追求家居暖意需求的生活方式，倡导温暖低碳健康生活，并以其强大的品牌影响力，谱写暖爱家居真性情。</p><p class="p">冬日暖阳秉承“追求卓越管理、创造完美品质、奉献至诚服务”的质量方针，严格按照要求，对每一片地板以“精工、精艺、精品”为标准，以管理为基石，以科技为先导，引进发热地板先进生产流水线和全自动红外线检测系统。于2010年成功研发非金属发热体技术，推出更高科技含量的发热地板，热量通过远红外释放，使地板具有超强的单向面发热性，实现只装地板就有地暖。一经投入市场，便以其高效、环保、健康的显著优势，迅速得到热捧和好评。</p><p class="p">海阔凭鱼跃，天高任鸟飞，大鹏已展翅，当搏击长空。今天，冬日暖阳凭借雄厚的实力，强大的品牌实力，顶尖的工艺技术，优秀的人才团队，先进的管理理念，优质丰富的产品傲立在中国地面采暖行业的至高点上，谱写发热地板划时代新篇章。</p><br>
+        <img src="../../../static/web/img/company_40_E7A774CF.jpg" width="21" height="1">
+    </div>
 </div>
 
     <div class="i-fi an-i">
@@ -241,105 +257,6 @@
         </div>
     </div>
 
-    <div class="i-se an-i" style="background:url(http://lvwarm.com/static/web/img/home_47.jpg?v=v2) no-repeat center">
-    	<div class="toentit"><img src="static/web/img/home_49_E7A774CF.png" alt="Warm    love notes News" width="855" height="46"></div>
-        <div class="tocntit">新闻中心</div>
-        <div class="tosentit"><img src="static/web/img/home_56_E7A774CF.png" alt="SCIENCE WARM GREEN HEALTH" width="194" height="18"></div>
-    	<div class="i-seb w1000">
-            <div class="le">
-    			<a href="index.php/manage/32/461/index.htm" class="leimg"><img src="upload/2016/09/14/147384519482qfruu.jpg" alt="" width="495" height="235"></a>
-    			<div class="con">
-    				<a href="index.php/manage/32/461/index.htm" class="more">more</a>
-    				<a href="index.php/manage/32/461/index.htm" class="tit">热烈祝贺冬日暖阳官方网站正式被百度认证...</a><br>
-    				<a href="index.php/manage/32/461/index.htm" class="txt">    经过6年的快速发展，冬日暖阳已成为国内发热地板行业当之...</a>
-    			</div>
-    		</div>
-			<div class="ri">
-    			<ul>
-					<li>
-    					<a href="index.php/manage/32/460/index.htm" class="img"><img src="upload/2016/09/09/147339428932uze3d.jpg" alt="" width="" height="88"></a>
-    					<div class="con">
-    						<a href="index.php/manage/32/460/index.htm" class="tit">热烈祝贺冬日暖阳发热地板湖州直营店签约...</a>
-    						<a href="index.php/manage/32/460/index.htm" class="txt">   2016年9月8日13点10分，冬日暖阳发热地板湖州直营店在工厂正式签约。浙...</a>
-    					</div>
-    				</li>
-					<li>
-    					<a href="index.php/manage/32/459/index.htm" class="img"><img src="upload/2016/09/06/147315122098x514r.jpg" alt="" width="" height="88"></a>
-    					<div class="con">
-    						<a href="index.php/manage/32/459/index.htm" class="tit">蝶变·创新·共赢  ——2016冬日暖...</a>
-    						<a href="index.php/manage/32/459/index.htm" class="txt"> 2016年9月19日，发热地板领军品牌冬日暖阳将携手全国经销商在五星级酒店——湖...</a>
-    					</div>
-    				</li>
-					<li>
-    					<a href="index.php/manage/32/456/index.htm" class="img"><img src="upload/2016/08/06/14704648255v94rz.jpg" alt="" width="" height="88"></a>
-    					<div class="con">
-    						<a href="index.php/manage/32/456/index.htm" class="tit">更快更高更强 冬日暖阳堪称发热地板界的...</a>
-    						<a href="index.php/manage/32/456/index.htm" class="txt">2016年8月6日，被称为人类最高级别，规模最大的体育赛事---奥运会，就在巴西首...</a>
-    					</div>
-    				</li>
-				</ul>
-    		</div>
-    	</div>
-    </div>
-
-    <div class="i-th an-i">
-    	<div class="toentit"><img src="static/web/img/home_65_E7A774CF.png" alt="Customer Case" width="504" height="46"></div>
-        <div class="tocntit">客户案例</div>
-        <div class="tosentit"><img src="static/web/img/home_16_E7A774CF.png" alt="SCIENCE WARM GREEN HEALTH" width="194" height="18"></div>
-    	<div class="i-thb w1000">
-    		<ul>
-    			<li>
-    				<div class="con">
-    					<a href="index.php/list/list/6/index.htm" class="tit">新房安装</a><br>
-    					<span class="entit"><img src="static/web/img/home_69_E7A774CF.png" alt="Install new homes" width="214" height="18"></span><br>
-    					<span class="hr"></span><br>
-    					<span class="txt"></span>
-    				</div>
-                    <a href="index.php/list/list/6/index.htm" class="pic-a">
-						<div class="clear-picshow">
-							<img data-title="成都天鹅湖别墅区谭先生" src="upload/2015/05/22/143228366917s1pto.jpg" alt="" class="jpg in-focus1">
-							<img data-title="某公司主管李先生" src="upload/2015/05/22/143228369599jwjmx.jpg" alt="" class="jpg ">
-							<img data-title="私企经理孔总" src="upload/2015/05/22/143228371366ycsfv.jpg" alt="" class="jpg ">
-						</div>
-					</a>
-    				<i></i>
-    			</li>
-    			<li class="li2">
-                    <a href="index.php/list/list/7/index.htm" class="pic-a">
-						<div class="clear-picshow">
-							<img data-title="退休工人张阿姨" src="upload/2015/05/22/143228376597x2fzv.jpg" alt="" class="jpg in-focus2">
-							<img data-title="南京60后夫妻" src="upload/2015/05/22/143228379765rovf.jpg" alt="" class="jpg ">
-							<img data-title="退休工人王阿姨" src="upload/2015/05/22/143228381519l7x7e.jpg" alt="" class="jpg ">
-						</div>
-                    </a>
-    				<div class="con">
-    					<a href="index.php/list/list/7/index.htm" class="tit">老房改造</a><br>
-    					<span class="entit"><img src="static/web/img/home_82_E7A774CF.png" alt="Old house renovation" width="214" height="18"></span><br>
-    					<span class="hr"></span><br>
-    					<span class="txt"></span>
-    				</div>
-    				<i></i>
-    			</li>
-    			<li>
-    				<div class="con">
-    					<a href="index.php/list/list/8/index.htm" class="tit">工程案例</a><br>
-    					<span class="entit"><img src="static/web/img/home_71_E7A774CF.png" alt="Engineering Case" width="214" height="18"></span><br>
-    					<span class="hr"></span><br>
-    					<span class="txt"></span>
-    				</div>
-                    <a href="index.php/list/list/8/index.htm" class="pic-a">
-						<div class="clear-picshow">
-							<img data-title="杭州某瑜伽馆" src="upload/2015/05/22/1432283837876dhr9.jpg" alt="" class="jpg in-focus3">
-							<img data-title="江苏某政府会议大厅" src="upload/2015/05/22/143228394507akk4m.jpg" alt="" class="jpg ">
-							<img data-title="义乌力舞舞蹈房" src="upload/2015/05/22/143228397236g8pck.jpg" alt="" class="jpg ">
-						</div>
-                    </a>
-    				<i></i>
-    			</li>
-    		</ul>
-    	</div>
-    </div>
-
     <div class="i-fo an-i">
     	<div class="toentit"><img src="static/web/img/home_91_E7A774CF.png" alt="Merchants JOIN" width="515" height="46"></div>
         <div class="tocntit">招商加盟</div>
@@ -348,42 +265,42 @@
         	<ul>
         		<li class="even" style="background:url(http://lvwarm.com/static/web/img/home_95.jpg?v=v2) no-repeat center">
         			<span class="bg"></span>
-        			<span class="btit">加盟<br>优势</span>
+        			<!--<span class="btit">加盟<br>优势</span>-->
         			<div class="con">
         				<a href="" class="tit">共创共赢</a><br>
         				<span class="hr"></span><br>
         				<span class="txt">冬日暖阳发热地板是采暖行业革命性的升级产品和发热地板行业的领导者。</span><br>
-        				<a href="index.php/mobile_ACFBB307" class="more">+</a>
+        				<!--<a href="index.php/mobile_ACFBB307" class="more">+</a>-->
         			</div>
         		</li>
         		<li class="odd" style="background:url(http://lvwarm.com/static/web/img/home_95-02.jpg?v=v2) no-repeat center">
         			<span class="bg"></span>
-        			<span class="btit">体验<br>中心</span>
+        			<!--<span class="btit">体验<br>中心</span>-->
         			<div class="con">
         				<a href="" class="tit">共创共赢</a><br>
         				<span class="hr"></span><br>
         				<span class="txt">让消费者零距离感受冬日暖阳高科技地暖一站式全景体验。</span><br>
-        				<a href="index.php/mobile_23FC827D" class="more">+</a>
+        				<!--<a href="index.php/mobile_23FC827D" class="more">+</a>-->
         			</div>
         		</li>
         		<li class="even" style="background:url(http://lvwarm.com/static/web/img/home_95-03.jpg?v=v2) no-repeat center">
         			<span class="bg"></span>
-        			<span class="btit">如何<br>加盟</span>
+        			<!--<span class="btit">如何<br>加盟</span>-->
         			<div class="con">
         				<a href="" class="tit">共创共赢</a><br>
         				<span class="hr"></span><br>
         				<span class="txt">寻求渴望成功的伙伴一起成就冬日暖阳事业！</span><br>
-        				<a href="index.php/mobile_9B05D3F3" class="more">+</a>
+        				<!--<a href="index.php/mobile_9B05D3F3" class="more">+</a>-->
         			</div>
         		</li>
         		<li class="odd" style="background:url(http://lvwarm.com/static/web/img/home_95-04.jpg?v=v2) no-repeat center">
         			<span class="bg"></span>
-        			<span class="btit">申请<br>加盟</span>
+        			<!--<span class="btit">申请<br>加盟</span>-->
         			<div class="con">
         				<a href="" class="tit">共创共赢</a><br>
         				<span class="hr"></span><br>
         				<span class="txt">选择冬日暖阳，实现您成功事业梦想！</span><br>
-        				<a href="index.php/mobile_4602E361" class="more">+</a>
+        				<!--<a href="index.php/mobile_4602E361" class="more">+</a>-->
         			</div>
         		</li>
         	</ul>
@@ -430,6 +347,11 @@
         $(this).find(".stit").stop().animate({"paddingTop":"20px"},500)
     })
    index()
+    profilescroll();
+
+    $(window).scroll(function(){
+        profilescroll();
+    })
     $(".leimg").hover(function(){
         $(this).find("img").animate({
             "width":"545px",
